--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "filehosting-app",
+  "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "npm run start --prefix backend",
-    "frontend": "cd frontend && npm run dev",
-    "backend": "cd backend && npm run dev",
-    "both": "concurrently \"npm run backend\" \"npm run frontend\""
+    "dev": "nodemon backend/index.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "nodemon backend/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "cryptr": "^6.3.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "express-fileupload": "^1.5.1",
+    "filehosting-app": "file:..",
+    "mongoose": "^8.15.2"
+  },
   "devDependencies": {
-    "concurrently": "^9.2.0"
+    "nodemon": "^3.1.10"
   }
 }
