--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "backend": "file:..",
     "filehosting-app": "file:..",
     "link-react": "^3.0.0",
     "react": "^19.1.0",
